grails-app/assets/stylesheets/changeexpiredpassword.css
/*******************************************************************************
 Copyright 2018 Ellucian Company L.P. and its affiliates.
*******************************************************************************/

/* Regular */
@font-face {
	font-family: 'OpenSans-Regular';

	src: url('fonts/OpenSans-Regular-webfont.eot');
	src: url('fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
	url('fonts/OpenSans-Regular-webfont.woff') format('woff'),
	url('fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
	url('fonts/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
	font-weight: normal;
	font-weight: 400;
	font-style: normal;

}
/* SemiBold */
@font-face {
	font-family: 'OpenSans-Semibold';
	src: url('fonts/OpenSans-Semibold-webfont.eot');
	src: url('fonts/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
	url('fonts/OpenSans-Semibold-webfont.woff') format('woff'),
	url('fonts/OpenSans-Semibold-webfont.ttf') format('truetype'),
	url('fonts/OpenSans-Semibold-webfont.svg#OpenSansSemibold') format('svg');
	font-weight: 500;
	font-style: normal;

}
/* Bold */
@font-face {
	font-family: 'OpenSans-bold';
	src: url('fonts/OpenSans-Bold-webfont.eot');
	src: url('fonts/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'),
	url('fonts/OpenSans-Bold-webfont.woff') format('woff'),
	url('fonts/OpenSans-Bold-webfont.ttf') format('truetype'),
	url('fonts/OpenSans-Bold-webfont.svg#OpenSansBold') format('svg');
	font-weight: bold;
	font-weight: 700;
	font-style: normal;
}


#content{
    font-size: 16px;

}

.main-wrapper{

}
.input-text{
    border-radius: 5px 5px 5px 5px;
    width: 400px;
	height: 1.5em;
}

.input-text.default-state{
    border: 1px solid #778FA1;
}

.input-text:hover{
    border: 1px solid #005C96;
}

.input-text:focus, .input-text.error-state:focus{
    border: 2px solid #778FA1;
}

.input-text.disabled-state{
    border: 1px solid #c9d2d9;
}

.input-text.error-state{
   border: 1px solid #CF4141;
}

.tabledata{
	padding: 5px;
	width: 50%;
}
.tabletext{
    font-weight: bold;
    text-align: right;
    width: 35%;
	padding: 5px;
}
.input-table {
    width: 100%;
	padding-bottom: 2em;
	padding-top: 2em;
}
table {
	border: none;
}
.tableheader {
	text-align: center;
}
.button-bar-container{
	width: 100%;
}
.button-bar{
	width: 100%;
	margin: 0 auto;
	text-align: center;

}

.maincontainer{
    border-bottom-right-radius:
}

.ui-widget-panel{
	font-family: OpenSans-regular;
	padding-top: 1em;
}

.invalid{
    color: #CF4141;
}



.notification-icon{
    background: url("../images/error.svg") no-repeat center;
	padding-left: 0.25em;
	padding-right: 0.25em;
	height: 1.5em;
	width: 1.25em;
	display: table-cell;
	float: left;
}
.secondary {
	margin-right: 1em;
}

.primary, .secondary {
	width: 8.5em;
	height: 2.8em;
	font-size: 0.875em !important
}

.primary, .secondary {
	width: 10.9em;
	height: 2.8em;
}
.eds-text-field {
	width: 22.7em;
	height: 2.8em;
}
/* Mobile Portrait */
@media only screen
  and (min-device-width: 320px)
  and (max-device-width: 736px)
  and (orientation: portrait) {

	.input-text{
	    width: 11em;
		height: 1.8em;
	}
	.tabletext{
	    text-align: right;
	    width: 7em ;
		padding: 5px;
	}
	.primary, .secondary {
		width: 8.5em;
		height: 2.8em;
		font-size: 0.875em !important
	}
	.eds-text-field {
		width: 100%;
		height: 2.8em;
	}
}

/* Mobile Landscape */
@media only screen
  and (min-device-width: 320px)
  and (max-device-width: 736px)
  and (orientation: landscape) {
	.tabletext{
		    text-align: left;
		    width: 0em ;
			padding: 5px;
		}

}

/* Tablet Portrait*/
@media only screen
  and (min-device-width: 768px)
  and (max-device-width: 1024px)
  and (orientation: portrait) {
	.tabletext {
			text-align: right;
			width: 35%;
		}
	.primary, .secondary {
		width: 8.5em;
		height: 2.8em;
	}
	.eds-text-field {
		width: 22.7em;
		height: 2.8em;
	}
}

/* Tablet Landscape*/
@media only screen
  and (min-device-width: 768px)
  and (max-device-width: 1024px)
  and (orientation: landscape) {
	.tabletext {
		text-align: right;
		width: 35%;
	}

}

